@@ -1,10 +1,13 @@
 package com.olympus.base.utils.support.utils;
 
+import com.olympus.base.utils.collection.CollectionUtils;
+
 import java.io.File;
 import java.io.IOException;
 import java.net.JarURLConnection;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.List;
@@ -25,7 +28,7 @@ public class ReflexUtils {
      */
     public static List<Class<?>> getAllClassByPackageName(String pkg) {
         List<Class<?>> returnClassList = getClasses(pkg);
-        if (returnClassList.size() == 0) {
+        if (CollectionUtils.isEmpty(returnClassList)) {
             throw new RuntimeException("类名错误/没有有效的对象");
         }
         return returnClassList;
@@ -97,57 +100,52 @@ public class ReflexUtils {
                 // 如果是以文件的形式保存在服务器上
                 if ("file".equals(protocol)) {
                     // 获取包的物理路径
-                    String filePath = URLDecoder.decode(url.getFile(), "UTF-8");
+                    String filePath = URLDecoder.decode(url.getFile(), StandardCharsets.UTF_8);
                     // 以文件的方式扫描整个包下的文件 并添加到集合中
                     findAndAddClassesInPackageByFile(packageName, filePath, recursive, classes);
                 } else if ("jar".equals(protocol)) {
                     // 如果是jar包文件
-                    // 定义一个JarFile
-                    JarFile jar;
-                    try {
-                        // 获取jar
-                        jar = ((JarURLConnection) url.openConnection()).getJarFile();
-                        // 从此jar包 得到一个枚举类
-                        Enumeration<JarEntry> entries = jar.entries();
-                        // 同样的进行循环迭代
-                        while (entries.hasMoreElements()) {
-                            // 获取jar里的一个实体 可以是目录 和一些jar包里的其他文件 如META-INF等文件
-                            JarEntry entry = entries.nextElement();
-                            String name = entry.getName();
-                            // 如果是以/开头的
-                            if (name.charAt(0) == '/') {
-                                // 获取后面的字符串
-                                name = name.substring(1);
+                    // 定义一个JarFile 获取jar
+                    JarFile jar = ((JarURLConnection) url.openConnection()).getJarFile();
+                    // 从此jar包 得到一个枚举类
+                    Enumeration<JarEntry> entries = jar.entries();
+                    // 同样的进行循环迭代
+                    while (entries.hasMoreElements()) {
+                        // 获取jar里的一个实体 可以是目录 和一些jar包里的其他文件 如META-INF等文件
+                        JarEntry entry = entries.nextElement();
+                        String name = entry.getName();
+                        // 如果是以/开头的
+                        if (name.charAt(0) == '/') {
+                            // 获取后面的字符串
+                            name = name.substring(1);
+                        }
+                        // 如果前半部分和定义的包名相同
+                        if (name.startsWith(packageDirName)) {
+                            int idx = name.lastIndexOf('/');
+                            // 如果以"/"结尾 是一个包
+                            if (idx != -1) {
+                                // 获取包名 把"/"替换成"."
+                                packageName = name.substring(0, idx).replace('/', '.');
                             }
-                            // 如果前半部分和定义的包名相同
-                            if (name.startsWith(packageDirName)) {
-                                int idx = name.lastIndexOf('/');
-                                // 如果以"/"结尾 是一个包
-                                if (idx != -1) {
-                                    // 获取包名 把"/"替换成"."
-                                    packageName = name.substring(0, idx).replace('/', '.');
-                                }
-                                // 如果可以迭代下去 并且是一个包
-                                // 如果是一个.class文件 而且不是目录
-                                if (name.endsWith(".class") && !entry.isDirectory()) {
-                                    // 去掉后面的".class" 获取真正的类名
-                                    String className = name.substring(packageName.length() + 1, name.length() - 6);
-                                    try {
-                                        // 添加到classes
-                                        classes.add(Class.forName(packageName + '.' + className));
-                                    } catch (ClassNotFoundException e) {
-                                        e.printStackTrace();
-                                    }
+                            // 如果可以迭代下去 并且是一个包
+                            // 如果是一个.class文件 而且不是目录
+                            if (name.endsWith(".class") && !entry.isDirectory()) {
+                                // 去掉后面的".class" 获取真正的类名
+                                String className = name.substring(packageName.length() + 1, name.length() - 6);
+                                try {
+                                    // 添加到classes
+                                    classes.add(Class.forName(packageName + '.' + className));
+                                } catch (ClassNotFoundException e) {
+                                    throw new RuntimeException(e);
                                 }
                             }
                         }
-                    } catch (IOException e) {
-                        e.printStackTrace();
                     }
+
                 }
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            throw new RuntimeException(e);
         }
 
         return classes;
@@ -179,11 +177,10 @@ public class ReflexUtils {
                         // 添加到集合中去
                         classes.add(Class.forName(packageName + '.' + className));
                     } catch (ClassNotFoundException e) {
-                        e.printStackTrace();
+                        throw new RuntimeException(e);
                     }
                 }
             }
         }
     }
-
 }
